--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,6 +1,16 @@
 controllers:
     resource: ../../src/Controller/
     type: annotation
+    host:
+        fr_BE: www.website.be
+        nl_BE: www.website.be
+        en: www.website.com
+        de: www.website.de
+    prefix:
+        fr_BE: '/fr'
+        nl_BE: '/nl'
+        en: ''
+        de: ''
 
 kernel:
     resource: ../../src/Kernel.php
